--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ aya = { git = "https://github.com/aya-rs/aya.git" }
 aya-build = { git = "https://github.com/aya-rs/aya.git" } 
 anyhow = "1.0.100"
 futures = "0.3.31"
+xdpilone = "1.0"
+libc = "0.2"
+procfs = "0.18.0"
+ping-async = "1.0.1"
+pnet = "0.35"
 
 [profile.release.package.turbine-ebpf-spy]
 debug = 2
