--- a/turbine-forwarder/Cargo.toml
+++ b/turbine-forwarder/Cargo.toml
@@ -10,6 +10,12 @@ anyhow.workspace = true
 clap = { version = "4.5.48", features = ["derive"] }
 arrayvec.workspace = true
 futures.workspace = true
+xdpilone.workspace = true
+libc.workspace = true
+network-types.workspace = true
+procfs.workspace = true
+ping-async.workspace = true
+pnet.workspace = true
 
 [build-dependencies]
 cargo_metadata = "0.23.0"
