--- a/shredcaster/Cargo.toml
+++ b/shredcaster/Cargo.toml
@@ -13,6 +13,7 @@ futures.workspace = true
 crossbeam-channel = "0.5.15"
 agave-xdp = "3.0.7"
 crossterm = "0.29.0"
+log = "0.4.28"
 
 [build-dependencies]
 cargo_metadata = "0.23.0"
